fix: add correct

--- a/source/scss/components/_aside.scss
+++ b/source/scss/components/_aside.scss
@@ -1,19 +1,20 @@
 .aside {
     width: 273px;
     height: 889px;
-}
 
-.aside__likes {
-    width: 271px;
-    height: 48px;
-}
+    .likes {
+        width: 271px;
+        height: 48px;
+    }
 
-.aside__users {
-    width: 271px;
-    height: 516px;
-}
+    .users {
+        width: 271px;
+        height: 516px;
+    }
 
-.aside__search {
-    width: 271px;
-    height: 48px;
+    .search {
+        width: 271px;
+        height: 48px;
+    }
+
 }
