--- a/source/scss/components/_nav.scss
+++ b/source/scss/components/_nav.scss
@@ -2,14 +2,14 @@
 .nav {
     width: 74px;
     height: 1000px;
-}
 
-.nav__logo {
-    width: 70px;
-    height: 71px;
-}
+    .logo {
+        width: 70px;
+        height: 71px;
+    }
 
-.nav__blocks {
-    width: 70px;
-    height: 929px;
+    .nav-items {
+        width: 70px;
+        height: 929px;
+    }
 }
