--- a/source/scss/components/_header.scss
+++ b/source/scss/components/_header.scss
@@ -1,14 +1,14 @@
 .header {
     width: 1298px;
     height: 169px;
-}
 
-.header__functions {
-    width: 1298px;
-    height: 71px;
-}
+    .header-items {
+        width: 1298px;
+        height: 71px;
+    }
 
-.header__daily {
-    width: 1298px;
-    height: 98px;
+    .daily {
+        width: 1298px;
+        height: 98px;
+    }
 }
