--- a/source/scss/components/_aside.scss
+++ b/source/scss/components/_aside.scss
@@ -1,6 +1,7 @@
 .aside {
-    width: 273px;
-    height: 889px;
+    // width: 273px;
+    height: 550px;
+    background: #99cccc;
 
     .likes {
         width: 271px;
