--- a/source/scss/components/_header.scss
+++ b/source/scss/components/_header.scss
@@ -1,6 +1,8 @@
 .header {
-    width: 1298px;
-    height: 169px;
+    // width: 1298px;
+    height: 170px;
+    background: #cccccc;
+    padding-left: 75px;
 
     .header-items {
         width: 1298px;
