--- a/source/scss/components/_header.scss
+++ b/source/scss/components/_header.scss
@@ -4,12 +4,12 @@
     background: #cccccc;
     padding-left: 75px;
 
-    .header-items {
+    &__main {
         width: 1298px;
         height: 71px;
     }
 
-    .daily {
+    &__footer {
         width: 1298px;
         height: 98px;
     }
