--- a/source/scss/components/_nav.scss
+++ b/source/scss/components/_nav.scss
@@ -3,7 +3,7 @@
     position: absolute;
     left: 0;
     width: 75px;
-    // height: 1000px;
+    height: 100%;
     background: linear-gradient( to bottom, #FA745A 0%, #FD5272 100%);
 
     &__logo {
