--- a/source/scss/components/_aside.scss
+++ b/source/scss/components/_aside.scss
@@ -1,21 +1,28 @@
 .aside {
-    height: 550px;
     background: #99cccc;
+    display: flex;
+    flex-direction: column;
+    width: 271px;
     
     // pepople message likes
     &__menu {
-        width: 271px;
+        background-color: darkviolet;
         height: 48px;
     }
     
-    &__cadrs {
-        width: 271px;
-        height: 516px;
+    &__cards {
+        background-color: yellow;
+        flex-grow: 1;        
     }
-
+    
     &__search {
-        width: 271px;
+        background-color: darkviolet;
         height: 48px;
     }
-
+    
+    &__footer {
+        background-color: yellow;
+        width: 271px;
+        height: 120px;
+    }
 }
