--- a/source/scss/main.scss
+++ b/source/scss/main.scss
@@ -1,5 +1,4 @@
 // Config
-
 @import './config/reset';
 @import './config/variables';
 @import './config/mixins';
@@ -11,4 +10,4 @@
 @import './components/main';
 @import './components/aside';
 @import './components/footer';
-// @import './components/container';
+@import './components/section';
