--- a/source/style/main.css
+++ b/source/style/main.css
@@ -393,10 +393,7 @@ textarea {
   color: #ff3333;
 }
 
-.nav__nav-items {
-  width: 75px;
-  height: 890px;
-}
+
 
 .header {
   height: 170px;
@@ -414,6 +411,12 @@ textarea {
   height: 98px;
 }
 
+.section {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+}
+
 .main {
   display: -webkit-box;
   display: -ms-flexbox;
@@ -423,21 +426,20 @@ textarea {
           align-items: stretch;
   -ms-flex-wrap: wrap;
       flex-wrap: wrap;
-  width: 1020px;
-  height: 795px;
   padding-left: 75px;
 }
 
 .main__monthly {
   width: 755px;
-  height: 265px;
+  height: 250px;
   background-color: aqua;
 }
 
-.main__revenue {
-  height: 265px;
-  width: 265px;
+.main__card {
+  height: 250px;
+  width: 250px;
   background-color: darkcyan;
+  margin: 5px;
 }
 
 .main__customers {
@@ -452,29 +454,50 @@ textarea {
   display: flex;
   -ms-flex-wrap: wrap;
       flex-wrap: wrap;
-  height: 500px;
+  height: 520px;
+  width: 520px;
+  background-color: aqua;
+}
+
+.main__todo {
   width: 500px;
+  height: 50%;
   background-color: darkviolet;
 }
 
 .aside {
-  height: 550px;
   background: #99cccc;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  width: 271px;
 }
 
 .aside__menu {
-  width: 271px;
+  background-color: darkviolet;
   height: 48px;
 }
 
-.aside__cadrs {
-  width: 271px;
-  height: 516px;
+.aside__cards {
+  background-color: yellow;
+  -webkit-box-flex: 1;
+      -ms-flex-positive: 1;
+          flex-grow: 1;
 }
 
 .aside__search {
-  width: 271px;
+  background-color: darkviolet;
   height: 48px;
+}
+
+.aside__footer {
+  background-color: yellow;
+  width: 271px;
+  height: 120px;
 }
 
 .footer {
