--- a/source/scss/main.scss
+++ b/source/scss/main.scss
@@ -9,5 +9,5 @@
 @import './components/header';
 @import './components/main';
 @import './components/aside';
-@import './components/footer';
+// @import './components/footer';
 @import './components/section';
