--- a/source/style/main.css
+++ b/source/style/main.css
@@ -377,7 +377,7 @@ textarea {
   position: absolute;
   left: 0;
   width: 75px;
-  height: 100%;
+  height: 1000px;
   background: -webkit-gradient(linear, left top, left bottom, from(#FA745A), to(#FD5272));
   background: linear-gradient(to bottom, #FA745A 0%, #FD5272 100%);
 }
@@ -386,14 +386,67 @@ textarea {
   display: block;
   width: 75px;
   height: 75px;
-  font-size: 30px;
+  padding-top: 15px;
+  font-family: 'Sansita Swashed', cursive;
+  font-size: 40px;
   background: #ffeeff;
   text-align: center;
   text-transform: uppercase;
   color: #ff3333;
+  background: #FFFFFF;
+  cursor: pointer;
 }
 
+.nav__items {
+  width: 75px;
+  height: 500px;
+  text-align: center;
+}
 
+.nav__cards {
+  width: 75px;
+  height: 75px;
+  padding-top: 55px;
+  cursor: pointer;
+}
+
+.nav--home {
+  background: url(/source/img/bar_icons/home.svg) no-repeat center;
+}
+
+.nav--stactics {
+  background: url(/source/img/bar_icons/stat.svg) no-repeat center;
+}
+
+.nav--users {
+  background: url(/source/img/bar_icons/users.svg) no-repeat center;
+}
+
+.nav--settings {
+  background: url(/source/img/bar_icons/settings_nav.svg) no-repeat center;
+}
+
+.nav--quires {
+  background: url(/source/img/bar_icons/quires.svg) no-repeat center;
+}
+
+.nav__titles {
+  font-family: 'Lato', sans-serif;
+  font-style: normal;
+  font-weight: bold;
+  font-size: 10px;
+  color: #FFFFFF;
+}
+
+.nav__button {
+  width: 20px;
+  height: 20px;
+  margin-left: 30px;
+  margin-top: 340px;
+  background: url(/source/img/bar_icons/power.svg) no-repeat;
+  border: none;
+  cursor: pointer;
+}
 
 .header {
   height: 170px;
@@ -411,12 +464,6 @@ textarea {
   height: 98px;
 }
 
-.section {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-}
-
 .main {
   display: -webkit-box;
   display: -ms-flexbox;
@@ -426,7 +473,6 @@ textarea {
           align-items: stretch;
   -ms-flex-wrap: wrap;
       flex-wrap: wrap;
-  padding-left: 75px;
 }
 
 .main__monthly {
@@ -500,9 +546,9 @@ textarea {
   height: 120px;
 }
 
-.footer {
-  width: 272px;
-  height: 225px;
-  background: #ccff99;
+.section {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
 }
 /*# sourceMappingURL=main.css.map */
