--- a/source/scss/config/_mixins.scss
+++ b/source/scss/config/_mixins.scss
@@ -5,3 +5,19 @@
     font-size: 10px;
     color: #FFFFFF;
 }
+
+@mixin names {
+    font-family: 'Lato', sans-serif;
+    font-style: normal;
+    font-weight: bold;
+    font-size: 15px;
+    
+}
+
+@mixin function {
+    font-family: 'Lato', sans-serif;
+    font-style: normal;
+    font-weight: normal;;
+    font-size: 12px;
+    
+}
