--- a/source/style/main.css
+++ b/source/style/main.css
@@ -450,18 +450,111 @@ textarea {
 
 .header {
   height: 170px;
-  background: #cccccc;
+  background: #FFFFFF;
   padding-left: 75px;
 }
 
 .header__main {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
   width: 1298px;
-  height: 71px;
+  height: 75px;
+}
+
+.header__tabs {
+  width: 75px;
+  height: 75px;
+  border: 0.5px solid #E6E6E6;
+  background: #FFFFFF;
+}
+
+.header--ellipse {
+  size: 35px;
+  background: url(/source/img/bar_icons/ellipse.svg) no-repeat center;
+}
+
+.header--folder {
+  background: url(/source/img/bar_icons/folder.svg) no-repeat center;
+}
+
+.header--settings {
+  background: url(/source/img/bar_icons/settings_header.svg) no-repeat center;
+}
+
+.header--upload {
+  background: url(/source/img/bar_icons/upload.svg) no-repeat center;
+}
+
+.header--planet {
+  background: url(/source/img/bar_icons/planet.svg) no-repeat center;
+}
+
+.header--letter {
+  background: url(/source/img/bar_icons/letter.svg) no-repeat center;
+}
+
+.header__form {
+  width: 600px;
+  height: 75px;
+  text-align: center;
+  padding-top: 15px;
+  padding-left: 80px;
+}
+
+.header__field {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  width: 335px;
+  height: 35px;
+}
+
+.header__search {
+  width: 300px;
+  height: 35px;
+  color: #ECECEC;
+  border-radius: 50px 0 0 50px;
+}
+
+.header__button {
+  width: 35px;
+  height: 41px;
+  background: url(/source/img/bar_icons/zoom.svg) no-repeat center;
+  border-radius: 0 50px 50px 0;
+}
+
+.header__names {
+  font-family: 'Lato', sans-serif;
+  font-style: normal;
+  font-weight: bold;
+  font-size: 15px;
+  width: 110px;
+  height: 20px;
+}
+
+.header__function {
+  font-family: 'Lato', sans-serif;
+  font-style: normal;
+  font-weight: normal;
+  font-size: 12px;
+  width: 110px;
+  height: 20px;
+}
+
+.header--size {
+  width: 120px;
+  height: 75px;
+  padding-left: 20px;
+  padding-top: 20px;
+  border: none;
+  text-align: left;
 }
 
 .header__footer {
   width: 1298px;
-  height: 98px;
+  height: 95px;
+  background-color: yellowgreen;
 }
 
 .main {
