--- a/source/scss/components/_header.scss
+++ b/source/scss/components/_header.scss
@@ -45,11 +45,11 @@
 
 
     &__form {
-        width: 600px;
+        width: 578px;
         height: 75px;
         text-align: center;
         padding-top: 15px;
-        padding-left: 80px;
+        padding-left: 110px;
     }
 
     &__field {
@@ -75,8 +75,9 @@
 
     &__names {
         @include names;
-        width: 110px;
+        width: 130px;
         height: 20px;
+        color: #FD4E75;
         
 
     }
@@ -85,6 +86,7 @@
         @include function;
         width: 110px;
         height: 20px;
+        color: #BFBFBF;
 
     }
 
