--- a/source/scss/components/_aside.scss
+++ b/source/scss/components/_aside.scss
@@ -40,7 +40,7 @@
     &__cards-block {
         display: flex;
         width: 240px;
-        height: 80px;
+        height: 75px;
         margin-left: 20px;
         border-bottom: 2px solid #E6E6E6;
     }
@@ -55,15 +55,72 @@
     &__chat {
         padding-left: 45px;
     }
+
+    &__field {
+        display: flex;
+        height: 48px;
+        font-size: 8px;
+        padding-left: 20px;
+        padding-top: 10px;
+        background: #ffffff;
+        border-bottom: 1px solid #E6E6E6;
+        border-top: 1px solid #E6E6E6;
+    }
     
     &__search {
-        background-color: darkviolet;
-        height: 48px;
+        width: 175px;
+        height: 18px;
+        border: none;
+        border-bottom: 1px solid #E6E6E6;
+        
     }
+
+    &__button {
+        width: 20px;
+        height: 20px;
+        border: none;
+        margin-left: 10px;
+        background: url(/source/img/bar_icons/zoom.svg);
+    }
+
+    &__correct {
+        width: 20px;
+        height: 20px;
+        border: none;
+        margin-left: 10px;
+        background: url(/source/img/bar_icons/edit.svg)
+    }
+
+
+
     
     &__footer {
-        background-color: yellow;
         width: 271px;
-        height: 205px;
+        height: 230px;
+        background: #ffffff
     }
+
+    &__header {
+        height: 13px;
+        text-align: center;
+        @include names;
+        margin-top: 30px;
+    }
+
+    &__socials {
+        display: flex;
+        flex-wrap: wrap;
+        // justify-content: space-around;
+        margin-top: 25px;
+        margin-left: 35px;
+    }
+
+    &__logo {
+        width: 55px;
+        height: 55px;
+        margin: 10px 7px;
+        // padding-left: 20px;
+    }
+
+
 }
