--- a/source/scss/components/_header.scss
+++ b/source/scss/components/_header.scss
@@ -20,7 +20,7 @@
     }
 
     &--ellipse {
-        size: 35px;background: url(/source/img/bar_icons/ellipse.svg) no-repeat center;
+        background: url(/source/img/bar_icons/ellipse.svg) no-repeat center;
     }
 
     &--folder {
