--- a/source/scss/components/_header.scss
+++ b/source/scss/components/_header.scss
@@ -50,6 +50,7 @@
         text-align: center;
         padding-top: 15px;
         padding-left: 110px;
+        border: 0.5px solid #E6E6E6;
     }
 
     &__field {
@@ -78,8 +79,6 @@
         width: 130px;
         height: 20px;
         color: #FD4E75;
-        
-
     }
 
     &__function {
@@ -87,7 +86,6 @@
         width: 110px;
         height: 20px;
         color: #BFBFBF;
-
     }
 
     &--size {
@@ -95,15 +93,80 @@
         height: 75px;
         padding-left: 20px;
         padding-top: 20px;
-        border: none;
+        // border: none;
         text-align: left;
     }
 
-
-
     &__footer {
-        width: 1298px;
+        display: flex;
+        width: 1293px;
         height: 95px;
-        background-color: yellowgreen;
+        border-right : 0.5px solid #E6E6E6;
+    }
+
+    &__blocks {
+        width: 160px;
+        height: 95px;
+        background: #FFFFFF;
+        // background: linear-gradient(to left, #FA745A 0%, #FD5272 100%);
+        padding-left: 35px;
+        padding-top: 15px;
+    }
+
+    &__title {
+        @include nav-text;
+        // width: 71px;
+        height: 11px;
+        font-size: 12px;
+        color: #767676;
+    }
+
+    &__text {
+        @include nav-text;
+        font-size: 20px;
+        margin-top: 10px;
+        text-transform: uppercase;
+        color: #FD576F;
+        margin-top: 8px;
+        // background: #FFFFFF;
+        // mix-blend-mode: screen;
+    }
+
+    &__span-text {
+        display: flex;
+        width: 50px;
+        height: 20px;
+        margin-top: 8px;
+    }
+
+    &__span-high {
+        @include nav-text;
+        font-size: 12px;
+        color: #BFBFBF;
+    }
+
+    &__span-high::before {
+        content: ''; 
+        left: 20px; bottom: -20px; /* Положение треугольника */
+        border: 6px solid transparent; /* Прозрачные границы */
+        border-bottom: 6px solid #A889E9; /* Добавляем треугольник */
+    }
+
+    &__span-low {
+        @include nav-text;
+        font-size: 12px;
+        color: #BFBFBF;
+    }
+
+    &__span-low::before {
+        content: ''; 
+        left: 20px; bottom: -20px; /* Положение треугольника */
+        border: 6px solid transparent; /* Прозрачные границы */
+        border-top: 6px solid #FD5670; /* Добавляем треугольник */
+    }
+
+    &__title-color {
+        color: #FD5372;
+        margin-top: 20px;
     }
 }
