--- a/source/scss/components/_main.scss
+++ b/source/scss/components/_main.scss
@@ -5,39 +5,53 @@
     display: flex;
     align-items: stretch;
     flex-wrap: wrap;
+    padding-left: 75px;
+    background: #E9E9E9;
    
     // monhly revonue progress
 
-    &__monthly {
-        width: 755px;
-        height: 250px;
+    &__header {
+        width: 730px;
+        height: 240px;
         background-color: aqua;
+        margin: 15px;
     }
 
     &__card {
-        height: 250px;
+        height: 240px;
         width: 250px;
         background-color: darkcyan;
-        margin: 5px;
+        margin: 15px 0;
+    }
+
+    &__card-margin {
+        margin: 0;
+        margin-top: 5px;
+
+
     }
 
     &__customers {
-        height: 500px;
+        height: 485px;
         width: 450px;
+        margin-left: 15px;
+        margin-right: 15px;
+        margin-bottom: 15px;
         background-color: darkolivegreen;
     }
 
     &__inner {
         display: flex;
         flex-wrap: wrap;
-        height: 520px;
-        width: 520px;
-        background-color: aqua;
+        justify-content: space-between;
+        height: 485px;
+        width: 530px;
+        background: #E9E9E9;
     }
 
     &__todo {
-        width: 500px;
-        height: 50%;
+        width: 530px;
+        height: 240px;
         background-color: darkviolet;
     }
 }
