--- a/source/style/main.css
+++ b/source/style/main.css
@@ -1,3 +1,4 @@
+@charset "UTF-8";
 /* http://meyerweb.com/eric/tools/css/reset/
    v2.0-modified | 20110126
    License: none (public domain)
@@ -499,6 +500,7 @@ textarea {
   text-align: center;
   padding-top: 15px;
   padding-left: 110px;
+  border: 0.5px solid #E6E6E6;
 }
 
 .header__field {
@@ -548,14 +550,104 @@ textarea {
   height: 75px;
   padding-left: 20px;
   padding-top: 20px;
-  border: none;
   text-align: left;
 }
 
 .header__footer {
-  width: 1298px;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  width: 1293px;
   height: 95px;
-  background-color: yellowgreen;
+  border-right: 0.5px solid #E6E6E6;
+}
+
+.header__blocks {
+  width: 160px;
+  height: 95px;
+  background: #FFFFFF;
+  padding-left: 35px;
+  padding-top: 15px;
+}
+
+.header__title {
+  font-family: 'Lato', sans-serif;
+  font-style: normal;
+  font-weight: bold;
+  font-size: 10px;
+  color: #FFFFFF;
+  height: 11px;
+  font-size: 12px;
+  color: #767676;
+}
+
+.header__text {
+  font-family: 'Lato', sans-serif;
+  font-style: normal;
+  font-weight: bold;
+  font-size: 10px;
+  color: #FFFFFF;
+  font-size: 20px;
+  margin-top: 10px;
+  text-transform: uppercase;
+  color: #FD576F;
+  margin-top: 8px;
+}
+
+.header__span-text {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  width: 50px;
+  height: 20px;
+  margin-top: 8px;
+}
+
+.header__span-high {
+  font-family: 'Lato', sans-serif;
+  font-style: normal;
+  font-weight: bold;
+  font-size: 10px;
+  color: #FFFFFF;
+  font-size: 12px;
+  color: #BFBFBF;
+}
+
+.header__span-high::before {
+  content: '';
+  left: 20px;
+  bottom: -20px;
+  /* Положение треугольника */
+  border: 6px solid transparent;
+  /* Прозрачные границы */
+  border-bottom: 6px solid #A889E9;
+  /* Добавляем треугольник */
+}
+
+.header__span-low {
+  font-family: 'Lato', sans-serif;
+  font-style: normal;
+  font-weight: bold;
+  font-size: 10px;
+  color: #FFFFFF;
+  font-size: 12px;
+  color: #BFBFBF;
+}
+
+.header__span-low::before {
+  content: '';
+  left: 20px;
+  bottom: -20px;
+  /* Положение треугольника */
+  border: 6px solid transparent;
+  /* Прозрачные границы */
+  border-top: 6px solid #FD5670;
+  /* Добавляем треугольник */
+}
+
+.header__title-color {
+  color: #FD5372;
+  margin-top: 20px;
 }
 
 .main {
@@ -567,24 +659,35 @@ textarea {
           align-items: stretch;
   -ms-flex-wrap: wrap;
       flex-wrap: wrap;
+  padding-left: 75px;
+  background: #E9E9E9;
 }
 
-.main__monthly {
-  width: 755px;
-  height: 250px;
+.main__header {
+  width: 730px;
+  height: 240px;
   background-color: aqua;
+  margin: 15px;
 }
 
 .main__card {
-  height: 250px;
+  height: 240px;
   width: 250px;
   background-color: darkcyan;
-  margin: 5px;
+  margin: 15px 0;
+}
+
+.main__card-margin {
+  margin: 0;
+  margin-top: 5px;
 }
 
 .main__customers {
-  height: 500px;
+  height: 485px;
   width: 450px;
+  margin-left: 15px;
+  margin-right: 15px;
+  margin-bottom: 15px;
   background-color: darkolivegreen;
 }
 
@@ -594,14 +697,17 @@ textarea {
   display: flex;
   -ms-flex-wrap: wrap;
       flex-wrap: wrap;
-  height: 520px;
-  width: 520px;
-  background-color: aqua;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+  height: 485px;
+  width: 530px;
+  background: #E9E9E9;
 }
 
 .main__todo {
-  width: 500px;
-  height: 50%;
+  width: 530px;
+  height: 240px;
   background-color: darkviolet;
 }
 
@@ -680,7 +786,7 @@ textarea {
   display: -ms-flexbox;
   display: flex;
   height: 48px;
-  font-size: 8px;
+  font-size: 10px;
   padding-left: 20px;
   padding-top: 10px;
   background: #ffffff;
