feat: add field card fuell

--- a/source/scss/components/_nav.scss
+++ b/source/scss/components/_nav.scss
@@ -18,6 +18,7 @@
         color: #ff3333;    
         background: #FFFFFF;
         cursor: pointer;
+        box-shadow: 5px -5px 12px 5px #DEDEDE;
     }
 
     &__items {
