--- a/source/scss/components/_main.scss
+++ b/source/scss/components/_main.scss
@@ -20,9 +20,85 @@
     &__card {
         height: 240px;
         width: 250px;
-        background-color: darkcyan;
+        background: #ffffff;
         margin: 15px 0;
+        padding-top: 20px;
+        text-align: center;
     }
+
+    &__card-size {
+        width: 187px;
+        height: 124px;
+        margin-top: 15px;
+    }
+
+    &__names {
+        @include names;
+        color: #777777;
+        font-size: 13px;
+    }
+
+    &__text {
+        @include nav-text;
+        font-size: 20px;
+        margin-top: 10px;
+        text-transform: uppercase;
+        color: #FD576F;
+        margin-top: 8px;
+    }
+
+    &__text-color {
+        color: #7774D5;
+    }
+
+    &__card-footer {
+        display: flex;
+        justify-content: space-around;
+        margin-top: 25px;
+    }
+
+    &__span-text {
+        display: flex;
+        width: 50px;
+        height: 20px;
+        margin-top: 8px;
+        margin-left: 80px;
+    }
+
+    &__span-text-margin {
+        // margin: auto;
+        margin-left: 0px;
+        width: 80px;
+
+    }
+
+    &__span-high {
+        @include nav-text;
+        font-size: 12px;
+        color: #BFBFBF;
+    }
+
+    &__span-high::before {
+        content: ''; 
+        left: 20px; bottom: -20px; /* Положение треугольника */
+        border: 6px solid transparent; /* Прозрачные границы */
+        border-bottom: 6px solid #A889E9; /* Добавляем треугольник */
+    }
+
+    &__span-low {
+        @include nav-text;
+        font-size: 12px;
+        color: #BFBFBF;
+    }
+
+    &__span-low::before {
+        content: ''; 
+        left: 20px; bottom: -20px; /* Положение треугольника */
+        border: 6px solid transparent; /* Прозрачные границы */
+        border-top: 6px solid #FD5670; /* Добавляем треугольник */
+    }
+
+
 
     &__card-margin {
         margin: 0;
