--- a/source/style/main.css
+++ b/source/style/main.css
@@ -396,6 +396,8 @@ textarea {
   color: #ff3333;
   background: #FFFFFF;
   cursor: pointer;
+  -webkit-box-shadow: 5px -5px 12px 5px #DEDEDE;
+          box-shadow: 5px -5px 12px 5px #DEDEDE;
 }
 
 .nav__items {
@@ -673,8 +675,108 @@ textarea {
 .main__card {
   height: 240px;
   width: 250px;
-  background-color: darkcyan;
+  background: #ffffff;
   margin: 15px 0;
+  padding-top: 20px;
+  text-align: center;
+}
+
+.main__card-size {
+  width: 187px;
+  height: 124px;
+  margin-top: 15px;
+}
+
+.main__names {
+  font-family: 'Lato', sans-serif;
+  font-style: normal;
+  font-weight: bold;
+  font-size: 15px;
+  color: #777777;
+  font-size: 13px;
+}
+
+.main__text {
+  font-family: 'Lato', sans-serif;
+  font-style: normal;
+  font-weight: bold;
+  font-size: 10px;
+  color: #FFFFFF;
+  font-size: 20px;
+  margin-top: 10px;
+  text-transform: uppercase;
+  color: #FD576F;
+  margin-top: 8px;
+}
+
+.main__text-color {
+  color: #7774D5;
+}
+
+.main__card-footer {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -ms-flex-pack: distribute;
+      justify-content: space-around;
+  margin-top: 25px;
+}
+
+.main__span-text {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  width: 50px;
+  height: 20px;
+  margin-top: 8px;
+  margin-left: 80px;
+}
+
+.main__span-text-margin {
+  margin-left: 0px;
+  width: 80px;
+}
+
+.main__span-high {
+  font-family: 'Lato', sans-serif;
+  font-style: normal;
+  font-weight: bold;
+  font-size: 10px;
+  color: #FFFFFF;
+  font-size: 12px;
+  color: #BFBFBF;
+}
+
+.main__span-high::before {
+  content: '';
+  left: 20px;
+  bottom: -20px;
+  /* Положение треугольника */
+  border: 6px solid transparent;
+  /* Прозрачные границы */
+  border-bottom: 6px solid #A889E9;
+  /* Добавляем треугольник */
+}
+
+.main__span-low {
+  font-family: 'Lato', sans-serif;
+  font-style: normal;
+  font-weight: bold;
+  font-size: 10px;
+  color: #FFFFFF;
+  font-size: 12px;
+  color: #BFBFBF;
+}
+
+.main__span-low::before {
+  content: '';
+  left: 20px;
+  bottom: -20px;
+  /* Положение треугольника */
+  border: 6px solid transparent;
+  /* Прозрачные границы */
+  border-top: 6px solid #FD5670;
+  /* Добавляем треугольник */
 }
 
 .main__card-margin {
