--- a/source/scss/components/_main.scss
+++ b/source/scss/components/_main.scss
@@ -36,6 +36,7 @@
         @include names;
         color: #777777;
         font-size: 13px;
+        text-transform: capitalize;
     }
 
     &__text {
@@ -101,17 +102,89 @@
 
     &__card-margin {
         margin: 0;
-        margin-top: 5px;
+        margin-top: 15px;
     }
 
-    &__customers {
+    &__footer {
         height: 485px;
         width: 450px;
         margin-left: 15px;
         margin-right: 15px;
         margin-bottom: 15px;
-        background-color: darkolivegreen;
+        padding: 25px;
+        background: #ffffff;
     }
+
+    &__footer-bloks {
+        display: flex;
+        justify-content: space-between;
+        width: 400px;
+        height: 80px;
+    }
+    
+
+    &__footer-card {
+        width: 45px;
+        height: 80px;
+    }
+
+    &__footer-text {
+        @include function;
+        width: 45px;
+        height: 8px;
+        font-size: 8px;
+    }
+
+    &__footer-span {
+        @include function;
+        width: 330px;
+        height: 80px;
+        padding: 10px;
+        border: 0.5px solid #E6E6E6;
+        background: #ffffff;
+        font-size: 12px;
+        font-weight: bold;
+        color: #BFBFBF;
+
+    }
+
+    &__footer-span-select {
+        @include function;
+        font-size: 12px;
+        font-weight: bold;
+        color: #000000;
+        text-transform: capitalize;
+
+    }
+
+    &__footer-inner {
+        display: flex;
+        justify-content: space-between;
+        width: 330px;
+        height: 180px;
+
+    }
+
+    &__footer-inner-aside {
+        width: 10px;
+        height: 180px;
+        border: none;
+        border-right: 0.5px solid #E6E6E6;
+    }
+
+    &__footer-inner-main {
+        width: 250px;
+        height: 180px;
+    }
+
+    &__footer-span-resize {
+        width: 250px;
+    }
+
+
+
+
+
 
     &__inner {
         display: flex;
@@ -127,7 +200,7 @@
 
     &__todo {
         width: 530px;
-        height: 240px;
+        height: 230px;
         padding: 25px;
         background: #ffffff;
     }
