--- a/source/style/main.css
+++ b/source/style/main.css
@@ -786,6 +786,16 @@ textarea {
 }
 
 .main__footer {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
   height: 485px;
   width: 450px;
   margin-left: 15px;
@@ -809,6 +819,7 @@ textarea {
 .main__footer-card {
   width: 45px;
   height: 80px;
+  text-align: center;
 }
 
 .main__footer-text {
@@ -819,6 +830,7 @@ textarea {
   width: 45px;
   height: 8px;
   font-size: 8px;
+  margin-top: 10px;
 }
 
 .main__footer-span {
@@ -834,6 +846,7 @@ textarea {
   font-size: 12px;
   font-weight: bold;
   color: #BFBFBF;
+  line-height: 16px;
 }
 
 .main__footer-span-select {
@@ -856,22 +869,33 @@ textarea {
           justify-content: space-between;
   width: 330px;
   height: 180px;
+  margin-left: 70px;
 }
 
 .main__footer-inner-aside {
   width: 10px;
   height: 180px;
   border: none;
-  border-right: 0.5px solid #E6E6E6;
+  border-right: 3px solid #E6E6E6;
 }
 
 .main__footer-inner-main {
-  width: 250px;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+  width: 310px;
   height: 180px;
 }
 
 .main__footer-span-resize {
-  width: 250px;
+  width: 310px;
 }
 
 .main__inner {
