--- a/source/scss/components/_main.scss
+++ b/source/scss/components/_main.scss
@@ -11,11 +11,83 @@
     // monhly revonue progress
 
     &__header {
+        // display: flex;
+        // justify-content: space-between;
         width: 730px;
         height: 240px;
-        background-color: aqua;
         margin: 15px;
+        padding: 25px;
+        background: #ffffff;
     }
+
+    &__header-header {
+        display: flex;
+        justify-content: space-between;
+        width: 680px;
+        height: 24px;
+    }
+
+    &__header-title {
+        @include names;
+        font-size: 13px;
+        font-weight: bold;
+        color: #777777;
+        text-transform: capitalize;
+    }
+
+    &__header-aside {
+        display: flex;
+        width: 194px;
+        height: 24px;
+    }
+
+    &__header-span {
+        @include function;
+        width: 60px;
+        height: 24px;
+        padding-top: 5px;
+        font-weight: bold;
+        color: #C4C4C4;
+        text-align: center;
+        background-color: transparent;
+    }
+
+    &__header-span:hover {
+        @include function;
+        width: 60px;
+        height: 24px;
+        font-weight: bold;
+        color: #C4C4C4;
+        text-align: center;
+        border-radius: 50px;
+        background-color: transparent;
+        background: linear-gradient(to left, #FA745A 0%, #FD5272 100%);
+    }
+
+
+    &__header-settings {
+        display: flex;
+        flex-direction: column;
+        justify-content: space-between;
+        width: 15px;
+        height: 25px;
+        border: none;
+        background: #ffffff;
+    }
+
+    &__header-circle {
+        width: 5px;
+        height: 5px;
+        color: #C4C4C4;
+        border-radius: 50px;
+        background: #C4C4C4;;
+    }
+
+
+
+
+
+
 
     &__card {
         height: 240px;
@@ -191,11 +263,6 @@
         width: 310px;
     }
 
-
-
-
-
-
     &__inner {
         display: flex;
         flex-wrap: wrap;
@@ -244,6 +311,8 @@
 
     &__inner-blocks-title {
         @include function;
+        width: 50px;
+        height: 13px;
         color: #FD576F;
         font-weight: bold;
         margin-left: 10px;
